--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
+    "helmet": "^5.0.2",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.16.2",
     "sequelize-auto": "^0.8.8",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "winston": "^3.6.0",
+    "winston-daily-rotate-file": "^4.6.1"
   }
 }
