--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
     "helmet": "^5.0.2",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.16.2",
