--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment-timezone": "^0.5.34",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
+    "node-cron": "^3.0.0",
     "sequelize": "^6.16.2",
     "sequelize-auto": "^0.8.8",
     "sequelize-cli": "^6.4.1",
